--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img src="images/logo.webp" alt="" class="w-[28px] h-[24px]">
                 <h2 class="font-bold text-2xl">Peddy</h2>
             </div>
-            <div class="md:flex md:flex-1 hidden gap-8 mt-2">
-                <h2>Home</h2>
-                <h2>Shop</h2>
-                <h2>Contact</h2>
+            <div class="md:flex md:flex-1 hidden gap-8 mt-2 md:-ml-12">
+                <h2 class="text-gray-500">Home</h2>
+                <h2 class="text-gray-500">Shop</h2>
+                <h2 class="text-gray-500">Contact</h2>
             </div>
             <div class="hidden md:flex custom p-3">
                 <img src="images/icons8-user-16.png" alt="">
@@ -48,5 +48,16 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="w-[80%] mx-auto">
+            <div class="flex flex-col justify-center items-center gap-4">
+                <p class="font-bold text-base md:text-2xl md:ml-24 text-center text-gray-400">Bringing Families Together ❤️‍🔥 </p>
+                <h1 class="font-extrabold text-2xl md:text-6xl lg:text-7xl text-center">Your Path to Adoption <br> Starts Here</h1>
+                <p class="text-center text-gray-400">Find your perfect companion and give a loving home to a pet in need. Start your adoption journey today!</p>
+                <button class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">View More</button>
+                <img src="images/pet.webp" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
