--- a/index.html
+++ b/index.html
@@ -54,10 +54,22 @@
                 <p class="font-bold text-base md:text-2xl md:ml-24 text-center text-gray-400">Bringing Families Together ❤️‍🔥 </p>
                 <h1 class="font-extrabold text-2xl md:text-6xl lg:text-7xl text-center">Your Path to Adoption <br> Starts Here</h1>
                 <p class="text-center text-gray-400">Find your perfect companion and give a loving home to a pet in need. Start your adoption journey today!</p>
-                <button class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">View More</button>
+                <button class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3"><a href="#adoption">View More</a></button>
                 <img src="images/pet.webp" alt="">
             </div>
         </section>
+        <section id="adoption" class="w-[80%] mx-auto mt-20">
+            <div class="flex flex-col justify-center items-center gap-4">
+                <h2 class="font-extrabold text-center text-xl md:text-4xl">Adopt  Your  Best Friend</h2>
+                <p class="text-center text-gray-400">Welcome a loyal friend into your life. Explore our collection of pets looking for a loving home and make a difference today!</p>
+            </div>
+            <nav id="categories" class="flex py-3 gap-3 md:gap-8 justify-center items-center flex-wrap"></nav>
+            <div class="flex md:flex-row flex-col justify-between gap-3 mt-6 mb-6">
+                <p class="text-center font-extrabold text-xl md:mt-2">Best Deal For You</p>
+                <button class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">Sort by Price</button>
+            </div>
+        </section>
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
