--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                 <p class="text-center font-extrabold text-xl md:mt-2">Best Deal For You</p>
                 <button class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">Sort by Price</button>
             </div>
+            <div class="flex md:flex-row flex-col gap-5">
+                <div class="md:w-3/5 p-3 border rounded-lg border-gray-600">
+                    <div id="pets-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"></div>
+                </div>
+                <div class="md:w-2/5 border rounded-lg border-gray-600"></div>
+            </div>
         </section>
     </main>
     <script src="js/script.js"></script>
