--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 <div class="md:w-3/5 p-3 border rounded-lg border-gray-600">
                     <div id="pets-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"></div>
                 </div>
-                <div class="md:w-2/5 border rounded-lg border-gray-600"></div>
+                <div class="md:w-2/5 border rounded-lg border-gray-600">
+                    <div id="add-to-list" class="grid grid-cols-1 md:grid-cols-2 gap-5 p-3"></div>
+                </div>
             </div>
         </section>
     </main>
