--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div id="pets-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"></div>
                 </div>
                 <div class="md:w-2/5 border rounded-lg border-gray-600">
-                    <div id="add-to-list" class="grid grid-cols-1 md:grid-cols-2 gap-5 p-3"></div>
+                    <div id="add-to-list" class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-5 p-3"></div>
                 </div>
             </div>
         </section>
