--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
             </div>
         </section>
     </main>
+    <button id="showModalData" class="btn hidden" onclick="customModal.showModal()">
+        
+      </button>
+      <dialog id="customModal" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+          <div id="modal-content">
+  
+          </div>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Cancel</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
     <script src="js/script.js"></script>
 </body>
 </html>
