--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="modal-action">
             <form method="dialog">
               <!-- if there is a button in form, it will close the modal -->
-              <button class="btn">Cancel</button>
+                <button class="active">Cancel</button>
             </form>
           </div>
         </div>
