--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
             <nav id="categories" class="flex py-3 gap-3 md:gap-8 justify-center items-center flex-wrap"></nav>
             <div class="flex md:flex-row flex-col justify-between gap-3 mt-6 mb-6">
                 <p class="text-center font-extrabold text-xl md:mt-2">Best Deal For You</p>
-                <button class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">Sort by Price</button>
+                <button id="sort-price-btn" class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">Sort by Price</button>
             </div>
+            <div class="flex items-center justify-center"><span id="loadingSpinner" class="loading loading-bars loading-sm hidden"></span></div>
             <div class="flex md:flex-row flex-col gap-5">
                 <div class="md:w-3/5 p-3 border rounded-lg border-gray-600">
                     <div id="pets-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"></div>
