--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 <button id="sort-price-btn" class="bg-[#0E7A81] text-white border rounded-lg px-5 py-3">Sort by Price</button>
             </div>
             <div class="flex items-center justify-center"><span id="loadingSpinner" class="loading loading-bars loading-sm hidden"></span></div>
-            <div class="flex md:flex-row flex-col gap-5">
-                <div class="md:w-3/5 p-3 border rounded-lg border-gray-600">
+            <div class="flex lg:flex-row flex-col gap-5">
+                <div class="lg:w-3/5 p-3 border rounded-lg border-gray-600">
                     <div id="pets-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"></div>
                 </div>
-                <div class="md:w-2/5 border rounded-lg border-gray-600">
-                    <div id="add-to-list" class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-5 p-3"></div>
+                <div class="lg:w-2/5 border rounded-lg border-gray-600">
+                    <div id="add-to-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 p-3"></div>
                 </div>
             </div>
         </section>
