fixed adopt button

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
           </div>
         </div>
       </dialog>
+
+      <dialog id="adoptionModal" class="adoption-modal hidden">
+        <div class="modal-content">
+          <div class="flex justify-center">
+            <img src="images/hand.jpg" alt="" class="h-[150px] w-[150px] object-cover">
+          </div>
+          <h2>Congrats</h2>
+          <p>Adoption Process is Start for your Pet</p>
+          <div id="countdown" class="countdown">3</div>
+        </div>
+      </dialog>
     <script src="js/script.js"></script>
 </body>
 </html>
