--- a/index.html
+++ b/index.html
@@ -80,6 +80,42 @@
             </div>
         </section>
     </main>
+    <footer class="bg-[#131313] mt-5 p-3">
+        <div class="m-6 w-[80%] mx-auto grid grid-cols-1 md:grid-cols-2 lg:flex lg:flex-row items-center gap-6 justify-between">
+                <div class="py-2">
+                    <div class="flex gap-2">
+                        <img src="images/logo.webp" alt="" class="w-[28px] h-[24px]">
+                        <h2 class="font-bold text-2xl text-white">Peddy</h2>
+                    </div>
+                    <p class="text-white">Location: av. Washington 165, NY CA</p>
+                    <p class="text-white">54003</p>
+                    <p class="text-white">Phone: +31 85 964 47 25</p>
+                    <p class="text-white">Email: info@yourdomain.com</p>
+                    <p class="text-white"> Openings hours: 9.00 AM - 5.00 PM</p>
+                    <div class="flex gap-2">
+                        <i class="ri-facebook-fill text-3xl text-blue-800"></i>
+                        <i class="ri-twitter-x-line text-3xl text-white"></i>
+                        <i class="ri-youtube-fill text-3xl text-red-700"></i>
+                        <i class="ri-instagram-line text-3xl text-pink-900"></i>
+                    </div>
+                </div>
+                <div class="lg:-mt-4">
+                    <p class="text-white font-bold text-xl mb-3">Useful Links</p>
+                    <a href="#"><p class="text-white">Home</p></a>
+                    <a href="#"><p class="text-white">About Us</p></a>
+                    <a href="#"><p class="text-white">Animals</p></a>
+                    <a href="#"><p class="text-white">Foundation</p></a>
+                    <a href="#"><p class="text-white">Contact</p></a>
+                </div>
+                <div class="lg:ml-20 lg:-mt-6">
+                    <p class="text-white font-bold text-xl mb-3">Drop a Message</p>
+                    <div class="flex flex-col gap-2">
+                        <input type="email" placeholder="Enter Your Email" class="bg-[#FFFFFF0D] w-[240px] h-[49px]">
+                        <button class="w-[240px] h-[49px] bg-[#0E7A81] font-bold text-white">Subscribe</button>
+                    </div>
+                </div>
+        </div>
+    </footer>
     <button id="showModalData" class="btn hidden" onclick="customModal.showModal()">
         
       </button>
