--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <img src="images/pet.webp" alt="">
             </div>
         </section>
-        <section id="adoption" class="w-[80%] mx-auto mt-20">
+        <section id="adoption" class="w-11/12 xl:w-[80%] mx-auto mt-20">
             <div class="flex flex-col justify-center items-center gap-4">
                 <h2 class="font-extrabold text-center text-xl md:text-4xl">Adopt  Your  Best Friend</h2>
                 <p class="text-center text-gray-400">Welcome a loyal friend into your life. Explore our collection of pets looking for a loving home and make a difference today!</p>
@@ -71,10 +71,10 @@
             </div>
             <div class="flex items-center justify-center"><span id="loadingSpinner" class="loading loading-bars loading-sm hidden"></span></div>
             <div class="flex lg:flex-row flex-col gap-5">
-                <div class="lg:w-3/5 p-3 border rounded-lg border-gray-600">
+                <div class="lg:w-[72%] xl:w-[60%] p-3 border rounded-lg border-gray-600">
                     <div id="pets-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"></div>
                 </div>
-                <div class="lg:w-2/5 border rounded-lg border-gray-600">
+                <div class="lg:w-[28%] xl:w-[40%] border rounded-lg border-gray-600">
                     <div id="add-to-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 p-3"></div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                         <i class="ri-instagram-line text-3xl text-pink-900"></i>
                     </div>
                 </div>
-                <div class="lg:-mt-4">
+                <div class="md:-mt-5">
                     <p class="text-white font-bold text-xl mb-3">Useful Links</p>
                     <a href="#"><p class="text-white">Home</p></a>
                     <a href="#"><p class="text-white">About Us</p></a>
@@ -107,7 +107,7 @@
                     <a href="#"><p class="text-white">Foundation</p></a>
                     <a href="#"><p class="text-white">Contact</p></a>
                 </div>
-                <div class="lg:ml-20 lg:-mt-6">
+                <div class="lg:ml-20 lg:-mt-8">
                     <p class="text-white font-bold text-xl mb-3">Drop a Message</p>
                     <div class="flex flex-col gap-2">
                         <input type="email" placeholder="Enter Your Email" class="bg-[#FFFFFF0D] w-[240px] h-[49px]">
